--- a/style.css
+++ b/style.css
@@ -4,10 +4,6 @@ body {
   box-sizing: border-box;
 }
 
-.d_none {
-  display: none;
-}
-
 header {
   width: 100%;
   height: 150px;
@@ -18,7 +14,6 @@ header {
   align-items: center;
 }
 
-
 h1 {
   color: white;
   font-size: 40px;
@@ -27,9 +22,9 @@ h1 {
   margin-block-end: 8px;
 }
 
-
-
-
+.d_none {
+  display: none;
+}
 
 #body_overlay {
   position: fixed;
@@ -59,7 +54,7 @@ h1 {
   top: 50%;
   transform: translate(-50%, -50%);
   padding: 20px;
-  background-color: rgb(13, 51, 64);
+  background-color: rgb(235, 250, 255);
   border: 1px solid silver;
   border-radius: 24px;
   box-shadow: 8px 8px 16px rgba(255, 255, 255, 0.1);
@@ -88,24 +83,49 @@ h1 {
 
 
 
-.card {
-  color: white;
+.card_white {
+  color: black;
   width: 250px;
   height: 250px;
   border-radius: 16px;
-  background-color: #050536;
   border: 3px solid transparent;
   background-clip: padding-box, border-box;
   background-origin: padding-box, border-box;
   background-image: 
-    linear-gradient(#050536, #050536), 
+    linear-gradient(white, white), 
     linear-gradient(135deg, #d946ef, #3b82f6, #06b6d4);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4), 
               0 0 15px rgba(147, 51, 234, 0.3);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.card:hover {
+.card_white:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.6), 
+              0 0 25px rgba(147, 51, 234, 0.6),
+              0 0 35px rgba(6, 182, 212, 0.4);
+}
+
+
+
+.card_green {
+  color: black;
+  width: 250px;
+  height: 250px;
+  border-radius: 16px;
+  border: 3px solid transparent;
+  background-clip: padding-box, border-box;
+  background-origin: padding-box, border-box;
+  background-image: 
+    linear-gradient(green, white), 
+    linear-gradient(135deg, #d946ef, #3b82f6, #06b6d4);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4), 
+              0 0 15px rgba(147, 51, 234, 0.3);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card_green:hover {
   cursor: pointer;
   transform: scale(1.05);
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.6), 
@@ -118,6 +138,58 @@ h1 {
 
 
 
+
+
+
+
+
+
+
+.card_content{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card_content img{
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.id_container {
+  width: 90%;
+  height: 35px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.name_container{
+width: 90%;
+height: 40px;
+}
+
+.type_container{
+  width: 90%;
+  height: 80px;
+}
+
+.type_container p{
+  width: 50px;
+  height: 20px;
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.img_container{
+  width: 90%;
+  display: flex;
+  justify-content: flex-end;
+}
 
 
 
