add loading spinner

--- a/style.css
+++ b/style.css
@@ -23,8 +23,66 @@ h1 {
 }
 
 .d_none {
-  display: none;
+  display: none !important;
 }
+
+
+#pokemon_content{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 16px;
+  gap: 16px;
+}
+
+
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: block;
+  margin:15px auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  z-index: 20;
+}
+.loader::after,
+.loader::before {
+  content: '';  
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: #FF3D00;
+  width: 16px;
+  height: 16px;
+  transform: translate(-50%, 50%);
+  border-radius: 50%;
+}
+.loader::before {
+  left: auto;
+  right: 0;
+  background: #FFF;
+  transform: translate(50%, 100%);
+}
+
+@keyframes rotation {
+0% {
+  transform: rotate(0deg);
+}
+100% {
+  transform: rotate(360deg);
+}
+} 
+    
+
+
 
 #body_overlay {
   position: fixed;
@@ -32,8 +90,9 @@ h1 {
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.573);
+  background-color: rgba(0, 0, 0, 0.762);
   transition: opacity 300ms ease-in-out;
+  z-index: 10;
 }
 
 @keyframes pulsate {
@@ -63,6 +122,7 @@ h1 {
   transition: opacity 300ms ease-in-out;
   text-align: center;
   animation: pulsate 3s infinite;
+  z-index: 15;
 }
 
 
@@ -358,15 +418,7 @@ height: 40px;
 
 
 
-#pokemon_content{
-  width: 100%;
-  height: 80vh;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding-top: 16px;
-  gap: 16px;
-}
+
 
 
 
