add filter function

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ h1 {
 }
 
 .input {
-  color: white;
+  color: black;
   border: 2px solid #8707ff;
   border-radius: 10px;
   padding: 10px 25px;
