--- a/style.css
+++ b/style.css
@@ -153,7 +153,6 @@ h1 {
   box-shadow: 2px 2px 15px #8707ff inset;
 }
 
-/* From Uiverse.io by ke1221 */
 button {
   color: #090909;
   padding: 0.7em 1.7em;
@@ -163,7 +162,7 @@ button {
   cursor: pointer;
   border: 1px solid #e8e8e8;
   transition: all 0.3s;
-  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+  box-shadow: 6px 6px 12px #e2b5b5, -6px -6px 12px #b7a3ff;
   position: fixed;
   bottom: 24px;
   left: 50%;
