--- a/style.css
+++ b/style.css
@@ -139,6 +139,118 @@ h1 {
   }
 }
 
+
+.dialog_name{
+  width: 100%;
+  height: 40px;
+  margin: 0;
+  color: white;
+  font-size: 24px;
+  font-weight: 700;
+  text-shadow: 1px 1px 2px black;
+  text-transform: capitalize;
+}
+
+.dialog_id{
+  width: 100%;
+  height: 40px;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.7);
+  text-shadow: 1px 1px 2px black;
+}
+
+.dialog_img{
+  width: 150px;
+  height: auto;
+}
+
+
+
+.arrow_container{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 140px;
+}
+
+
+.arrow_left {
+  transform: translate(-50%, -50%);
+  transform: rotate(90deg);
+  cursor: pointer;
+}
+
+.arrow_left span {
+  display: block;
+  width: 1vw;
+  height: 1vw;
+  border-bottom: 5px solid rgba(0, 0, 0, 0.485);
+  border-right: 5px solid rgba(0, 0, 0, 0.485);
+  transform: rotate(45deg);
+  margin: -10px;
+  animation: animate 2s infinite;
+}
+
+.arrow_left span:nth-child(2) {
+  animation-delay: -0.2s;
+}
+
+.arrow_left span:nth-child(3) {
+  animation-delay: -0.4s;
+}
+
+
+.arrow_right {
+  transform: translate(-50%, -50%);
+  transform: rotate(270deg);
+  cursor: pointer;
+}
+
+.arrow_right span {
+  display: block;
+  width: 1vw;
+  height: 1vw;
+  border-bottom: 5px solid rgba(0, 0, 0, 0.485);
+  border-right: 5px solid rgba(0, 0, 0, 0.485);
+  transform: rotate(45deg);
+  margin: -10px;
+  animation: animate 2s infinite;
+}
+
+.arrow_right span:nth-child(2) {
+  animation-delay: -0.2s;
+}
+
+.arrow_right span:nth-child(3) {
+  animation-delay: -0.4s;
+}
+
+
+@keyframes animate {
+  0% {
+      opacity: 0;
+      transform: rotate(45deg) translate(-20px, -20px);
+  }
+  50% {
+      opacity: 1;
+  }
+  100% {
+      opacity: 0;
+      transform: rotate(45deg) translate(20px, 20px);
+  }
+}
+
+
+
+
+
+
 .input {
   color: black;
   border: 2px solid #8707ff;
