--- a/style.css
+++ b/style.css
@@ -113,66 +113,6 @@ h1 {
   z-index: 10;
 }
 
-.dialog {
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  padding: 20px;
-  background-color: rgb(235, 250, 255);
-  border: 1px solid silver;
-  border-radius: 24px;
-  box-shadow: 8px 8px 16px rgba(255, 255, 255, 0.1);
-  width: 300px;
-  height: 400px;
-  transition: opacity 300ms ease-in-out;
-  text-align: center;
-  animation: pulsate 3s infinite;
-  z-index: 15;
-}
-
-@keyframes pulsate {
-  0% {
-    box-shadow: 0 0 8px rgba(255, 255, 255, 0.1), inset 0 0 5px rgba(255, 255, 255, 0.1);
-  }
-  50% {
-    box-shadow: 0 0 12px rgba(255, 255, 255, 0.5), inset 0 0 10px rgba(255, 255, 255, 0.5);
-  }
-  100% {
-    box-shadow: 0 0 8px rgba(255, 255, 255, 0.1), inset 0 0 5px rgba(255, 255, 255, 0.1);
-  }
-}
-
-
-.dialog_name{
-  width: 100%;
-  height: 40px;
-  margin: 0;
-  color: white;
-  font-size: 24px;
-  font-weight: 700;
-  text-shadow: 1px 1px 2px black;
-  text-transform: capitalize;
-}
-
-.dialog_id{
-  width: 100%;
-  height: 40px;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 16px;
-  color: rgba(255, 255, 255, 0.7);
-  text-shadow: 1px 1px 2px black;
-}
-
-.dialog_img{
-  width: 100px;
-  height: auto;
-}
-
-
 
 .arrow_container{
   width: 100%;
@@ -182,8 +122,6 @@ h1 {
   align-items: center;
   margin-top: 140px;
 }
-
-
 
 .arrow_left {
   position: absolute;
@@ -214,7 +152,6 @@ h1 {
   animation-delay: -0.4s;
 }
 
-
 .arrow_right {
   position: absolute;
   right: 80px;
@@ -244,7 +181,6 @@ h1 {
   animation-delay: -0.4s;
 }
 
-
 @keyframes animate {
   0% {
       opacity: 0;
@@ -260,10 +196,6 @@ h1 {
 }
 
 
-
-
-
-
 .input {
   color: black;
   border: 2px solid #8707ff;
@@ -276,6 +208,16 @@ h1 {
 .input:active {
   box-shadow: 2px 2px 15px #8707ff inset;
 }
+
+
+#info_field p{
+  color: red;
+  font-size: 18px;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+
 
 button {
   color: #090909;
@@ -296,4 +238,8 @@ button {
 button:active {
   color: #666;
   box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+}
+
+button:hover{
+  background: #9f9898;
 }
