--- a/styles/cards.css
+++ b/styles/cards.css
@@ -32,14 +32,22 @@
   }
   
   .name_container p{
-    margin-top: 68px;
+    margin-top: 60px;
   }
 
   .character_container{
+    width: 90%;
+    height: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 100px;
+  }
+
+  .responsive_img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .type_container{
@@ -48,7 +56,7 @@
   }
   
   .type_container p{
-    width: 50px;
+    width: 60px;
     height: 20px;
     color: white;
     margin-top: 6px;
@@ -60,11 +68,6 @@
     box-shadow: 2px 3px rgba(0, 0, 0, 0.185);
   }
   
-  .img_pokemon{
-    width: 150px;
-    height: auto
-  }
-
 
   .dialog {
     position: fixed;
