--- a/style.css
+++ b/style.css
@@ -1,11 +1,24 @@
-body {
-  background-color: white;
+html, body {
+  /* background-color: white;
   margin: 0;
-  box-sizing: border-box;
+  box-sizing: border-box; */
+
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+body{
+  min-height: 100vh;
+}
+
+header, #pokemon_content, footer {
+  padding: 10px; /* Optional: Abstand für Header, Content und Footer */
 }
 
 header {
-  width: 100%;
   height: 150px;
   background-color: white;
   display: flex;
@@ -38,14 +51,13 @@ h1 {
 }
 
 #pokemon_content {
-  width: 100%;
-  height: 100vh;
+  flex: 1;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-top: 16px;
   gap: 16px;
 }
+
 
 .loader {
   width: 48px;
@@ -114,86 +126,7 @@ h1 {
 }
 
 
-.arrow_container{
-  width: 100%;
-  height: 50px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-top: 140px;
-}
 
-.arrow_left {
-  position: absolute;
-  left: 80px;
-  bottom: 20px;
-
-  transform: translate(-50%, -50%);
-  transform: rotate(90deg);
-  cursor: pointer;
-}
-
-.arrow_left span {
-  display: block;
-  width: 1vw;
-  height: 1vw;
-  border-bottom: 5px solid rgba(0, 0, 0, 0.485);
-  border-right: 5px solid rgba(0, 0, 0, 0.485);
-  transform: rotate(45deg);
-  margin: -10px;
-  animation: animate 2s infinite;
-}
-
-.arrow_left span:nth-child(2) {
-  animation-delay: -0.2s;
-}
-
-.arrow_left span:nth-child(3) {
-  animation-delay: -0.4s;
-}
-
-.arrow_right {
-  position: absolute;
-  right: 80px;
-  bottom: 20px;
-
-  transform: translate(-50%, -50%);
-  transform: rotate(270deg);
-  cursor: pointer;
-}
-
-.arrow_right span {
-  display: block;
-  width: 1vw;
-  height: 1vw;
-  border-bottom: 5px solid rgba(0, 0, 0, 0.485);
-  border-right: 5px solid rgba(0, 0, 0, 0.485);
-  transform: rotate(45deg);
-  margin: -10px;
-  animation: animate 2s infinite;
-}
-
-.arrow_right span:nth-child(2) {
-  animation-delay: -0.2s;
-}
-
-.arrow_right span:nth-child(3) {
-  animation-delay: -0.4s;
-}
-
-@keyframes animate {
-  0% {
-      opacity: 0;
-      transform: rotate(45deg) translate(-20px, -20px);
-  }
-  50% {
-      opacity: 1;
-  }
-  100% {
-      opacity: 0;
-      transform: rotate(45deg) translate(20px, 20px);
-  }
-}
 
 
 .input {
@@ -230,7 +163,7 @@ button {
   transition: all 0.3s;
   box-shadow: 6px 6px 12px #e2b5b5, -6px -6px 12px #b7a3ff;
   position: fixed;
-  bottom: 24px;
+  bottom: 10px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -242,4 +175,11 @@ button:active {
 
 button:hover{
   background: #9f9898;
+}
+
+footer{
+  background-color: #090909;
+  color: white;
+  text-align: center;
+  padding: 10px;
 }
