--- a/styles/cards.css
+++ b/styles/cards.css
@@ -1,26 +1,26 @@
-  .card_content{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-  }
+.card_content {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
 
-  .id_container {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 90%;
-    height: 25px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    font-size: 16px;
-    color: rgba(255, 255, 255, 0.7);
-    text-shadow: 1px 1px 2px black;
-  }
-  
-  .name_container{
+.id_container {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 90%;
+  height: 25px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.7);
+  text-shadow: 1px 1px 2px black;
+}
+
+.name_container {
   width: 90%;
   height: 40px;
   margin: 0;
@@ -29,101 +29,254 @@
   font-weight: 700;
   text-shadow: 1px 1px 2px black;
   text-transform: capitalize;
-  }
-  
-  .name_container p{
-    margin-top: 60px;
-  }
+}
 
-  .character_container{
-    width: 90%;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 100px;
-  }
+.name_container p {
+  margin-top: 60px;
+}
 
-  .responsive_img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+.character_container {
+  width: 90%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 72px;
+}
 
-  .type_container{
-    width: 90%;
-    height: 80px;
-  }
-  
-  .type_container p{
-    width: 60px;
-    height: 20px;
-    color: white;
-    margin-top: 6px;
-    margin-bottom: 0;
-    text-align: center;
-    text-shadow: 1px 1px 2px black;
-    border: 1px solid white;
-    border-radius: 10px;
-    box-shadow: 2px 3px rgba(0, 0, 0, 0.185);
-  }
-  
+.responsive_img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-  .dialog {
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    background-color: rgb(235, 250, 255);
-    border: 1px solid silver;
-    border-radius: 24px;
-    box-shadow: 8px 8px 16px rgba(255, 255, 255, 0.1);
-    width: 300px;
-    height: 400px;
-    transition: opacity 300ms ease-in-out;
-    text-align: center;
-    animation: pulsate 3s infinite;
-    z-index: 15;
+.type_container {
+  width: 90%;
+  height: 80px;
+}
+
+.type_container p {
+  width: 60px;
+  height: 20px;
+  color: white;
+  margin-top: 6px;
+  margin-bottom: 0;
+  text-align: center;
+  text-shadow: 1px 1px 2px black;
+  border: 1px solid white;
+  border-radius: 10px;
+  box-shadow: 2px 3px rgba(0, 0, 0, 0.185);
+}
+
+
+
+.dialog {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: rgb(235, 250, 255);
+  border: 1px solid silver;
+  border-radius: 24px;
+  box-shadow: 8px 8px 16px rgba(255, 255, 255, 0.1);
+  width: 300px;
+  height: 400px;
+  transition: opacity 300ms ease-in-out;
+  text-align: center;
+  animation: pulsate 3s infinite;
+  z-index: 15;
+}
+
+/* NEU */
+.dialog_grass {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: green;
+  border: 1px solid silver;
+  border-radius: 24px;
+  box-shadow: 8px 8px 16px rgba(255, 255, 255, 0.1);
+  width: 300px;
+  height: 400px;
+  transition: opacity 300ms ease-in-out;
+  text-align: center;
+  animation: pulsate 3s infinite;
+  z-index: 15;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.dialog_id {
+  width: 100%;
+  height: 20px;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.7);
+  text-shadow: 1px 1px 2px black;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.dialog_name {
+  width: 100%;
+  height: 40px;
+  margin: 0;
+  color: white;
+  font-size: 24px;
+  font-weight: 700;
+  text-shadow: 1px 1px 2px black;
+  text-transform: capitalize;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.dialog_img {
+  width: 30%;
+  height: auto;
+}
+
+
+.dialog_about_container {
+  width: 100%;
+  height: auto;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: white;
+}
+
+.dialog_about_container p{
+display: flex;
+justify-content: flex-start;
+padding-left: 8px;
+}
+
+.arrow_container{
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.arrow_left {
+  position: absolute;
+  left: 80px;
+  bottom: 20px;
+
+  transform: translate(-50%, -50%);
+  transform: rotate(90deg);
+  cursor: pointer;
+}
+
+.arrow_left span {
+  display: block;
+  width: 1vw;
+  height: 1vw;
+  border-bottom: 5px solid rgba(0, 0, 0, 0.485);
+  border-right: 5px solid rgba(0, 0, 0, 0.485);
+  transform: rotate(45deg);
+  margin: -10px;
+  animation: animate 2s infinite;
+}
+
+.arrow_left span:nth-child(2) {
+  animation-delay: -0.2s;
+}
+
+.arrow_left span:nth-child(3) {
+  animation-delay: -0.4s;
+}
+
+.arrow_right {
+  position: absolute;
+  right: 80px;
+  bottom: 20px;
+
+  transform: translate(-50%, -50%);
+  transform: rotate(270deg);
+  cursor: pointer;
+}
+
+.arrow_right span {
+  display: block;
+  width: 1vw;
+  height: 1vw;
+  border-bottom: 5px solid rgba(0, 0, 0, 0.485);
+  border-right: 5px solid rgba(0, 0, 0, 0.485);
+  transform: rotate(45deg);
+  margin: -10px;
+  animation: animate 2s infinite;
+}
+
+.arrow_right span:nth-child(2) {
+  animation-delay: -0.2s;
+}
+
+.arrow_right span:nth-child(3) {
+  animation-delay: -0.4s;
+}
+
+
+
+
+
+
+
+
+
+
+
+@keyframes pulsate {
+  0% {
+    box-shadow: 0 0 8px rgba(255, 255, 255, 0.1), inset 0 0 5px rgba(255, 255, 255, 0.1);
   }
-  
-  @keyframes pulsate {
-    0% {
-      box-shadow: 0 0 8px rgba(255, 255, 255, 0.1), inset 0 0 5px rgba(255, 255, 255, 0.1);
-    }
-    50% {
-      box-shadow: 0 0 12px rgba(255, 255, 255, 0.5), inset 0 0 10px rgba(255, 255, 255, 0.5);
-    }
-    100% {
-      box-shadow: 0 0 8px rgba(255, 255, 255, 0.1), inset 0 0 5px rgba(255, 255, 255, 0.1);
-    }
+  50% {
+    box-shadow: 0 0 12px rgba(255, 255, 255, 0.5), inset 0 0 10px rgba(255, 255, 255, 0.5);
   }
-  
-  
-  .dialog_name{
-    width: 100%;
-    height: 40px;
-    margin: 0;
-    color: white;
-    font-size: 24px;
-    font-weight: 700;
-    text-shadow: 1px 1px 2px black;
-    text-transform: capitalize;
+  100% {
+    box-shadow: 0 0 8px rgba(255, 255, 255, 0.1), inset 0 0 5px rgba(255, 255, 255, 0.1);
   }
-  
-  .dialog_id{
-    width: 100%;
-    height: 40px;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
-    color: rgba(255, 255, 255, 0.7);
-    text-shadow: 1px 1px 2px black;
+}
+
+
+@keyframes animate {
+  0% {
+      opacity: 0;
+      transform: rotate(45deg) translate(-20px, -20px);
   }
-  
-  .dialog_img{
-    width: 100px;
-    height: auto;
+  50% {
+      opacity: 1;
   }
+  100% {
+      opacity: 0;
+      transform: rotate(45deg) translate(20px, 20px);
+  }
+}
