--- a/styles/cards.css
+++ b/styles/cards.css
@@ -88,7 +88,6 @@
   z-index: 15;
 }
 
-/* NEU */
 .dialog_grass {
   position: fixed;
   left: 50%;
@@ -546,5 +545,12 @@ padding-left: 8px;
   100% {
       opacity: 0;
       transform: rotate(45deg) translate(20px, 20px);
+  }
+}
+
+@media (max-width: 430px) {
+  .dialog{
+    width: 250px;
+    height: 400px;
   }
 }
