--- a/style.css
+++ b/style.css
@@ -12,10 +12,11 @@ html, body {
 
 body{
   min-height: 100vh;
+  
 }
 
 header, #pokemon_content, footer {
-  padding: 10px; /* Optional: Abstand für Header, Content und Footer */
+  padding: 15px; /* Optional: Abstand für Header, Content und Footer */
 }
 
 header {
@@ -29,10 +30,16 @@ header {
 }
 
 h1 {
+  font-family: 'Pokemon Hollow', Arial, Helvetica, sans-serif;
   color: black;
-  font-size: 66px;
+  width: 300px;
+  height: 100px;
+  font-size: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  margin-block-start: 8px;
+  margin-block-start: 0;
   margin-block-end: 8px;
 }
 
@@ -179,15 +186,21 @@ button:hover{
 
 
 
-
-
-
 footer{
   background-color: #090909;
   color: white;
   text-align: center;
   padding: 10px;
 }
+
+
+
+@font-face {
+  font-family: 'Pokemon Hollow';
+  src: url('./fonts/Pokemon/Hollow.ttf') format('truetype');
+}
+
+
 
 @media (max-width: 430px) {
   h1{
