--- a/styles/icons.css
+++ b/styles/icons.css
@@ -1,109 +1,109 @@
 .icon {
-    border-radius: 100%;
-    height: 100px;
-    width: 100px;
-    margin:auto;
-    transition: 200ms all;
+  border-radius: 100%;
+  height: 100px;
+  width: 100px;
+  margin: auto;
+  transition: 200ms all;
 }
 
-.icon:hover{
-    filter: saturate(200%);
-    transform: scale(1.1);
-    cursor: pointer;
+.icon:hover {
+  filter: saturate(200%);
+  transform: scale(1.1);
+  cursor: pointer;
 }
 
 .icon img {
-    height: 60%;
-    width: 60%;
-    margin: 20%;
+  height: 60%;
+  width: 60%;
+  margin: 20%;
 }
 
 .bug {
-    background: #92BC2C;
-    box-shadow: 0 0 20px #92BC2C;
+  background: #92bc2c;
+  box-shadow: 0 0 20px #92bc2c;
 }
 
 .dark {
-    background: #595761;
-    box-shadow: 0 0 20px #595761;
+  background: #595761;
+  box-shadow: 0 0 20px #595761;
 }
 
 .dragon {
-    background: #0C69C8;
-    box-shadow: 0 0 20px #0C69C8;
+  background: #0c69c8;
+  box-shadow: 0 0 20px #0c69c8;
 }
 
 .electric {
-    background: #F2D94E;
-    box-shadow: 0 0 20px #F2D94E;
+  background: #f2d94e;
+  box-shadow: 0 0 20px #f2d94e;
 }
 
 .fire {
-    background: #FBA54C;
-    box-shadow: 0 0 20px #FBA54C;
+  background: #fba54c;
+  box-shadow: 0 0 20px #fba54c;
 }
 
 .fairy {
-    background: #EE90E6;
-    box-shadow: 0 0 20px #EE90E6;
+  background: #ee90e6;
+  box-shadow: 0 0 20px #ee90e6;
 }
 
 .fighting {
-    background: #D3425F;
-    box-shadow: 0 0 20px #D3425F;
+  background: #d3425f;
+  box-shadow: 0 0 20px #d3425f;
 }
 
 .flying {
-    background: #A1BBEC;
-    box-shadow: 0 0 20px #A1BBEC;
+  background: #a1bbec;
+  box-shadow: 0 0 20px #a1bbec;
 }
 
 .ghost {
-    background: #5F6DBC;
-    box-shadow: 0 0 20px #5F6DBC;
+  background: #5f6dbc;
+  box-shadow: 0 0 20px #5f6dbc;
 }
 
 .grass {
-    background: #5FBD58;
-    box-shadow: 0 0 20px #5FBD58;
+  background: #5fbd58;
+  box-shadow: 0 0 20px #5fbd58;
 }
 
 .ground {
-    background: #DA7C4D;
-    box-shadow: 0 0 20px #DA7C4D;
+  background: #da7c4d;
+  box-shadow: 0 0 20px #da7c4d;
 }
 
 .ice {
-    background: #75D0C1;
-    box-shadow: 0 0 20px #75D0C1;
+  background: #75d0c1;
+  box-shadow: 0 0 20px #75d0c1;
 }
 
 .normal {
-    background: #A0A29F;
-    box-shadow: 0 0 20px #A0A29F;
+  background: #a0a29f;
+  box-shadow: 0 0 20px #a0a29f;
 }
 
 .poison {
-    background: #B763CF;
-    box-shadow: 0 0 20px #B763CF;
+  background: #b763cf;
+  box-shadow: 0 0 20px #b763cf;
 }
 
 .psychic {
-    background: #FA8581;
-    box-shadow: 0 0 20px #FA8581;
+  background: #fa8581;
+  box-shadow: 0 0 20px #fa8581;
 }
 
 .rock {
-    background: #C9BB8A;
-    box-shadow: 0 0 20px #C9BB8A;
+  background: #c9bb8a;
+  box-shadow: 0 0 20px #c9bb8a;
 }
 
 .steel {
-    background: #5695A3;
-    box-shadow: 0 0 20px #5695A3;
+  background: #5695a3;
+  box-shadow: 0 0 20px #5695a3;
 }
 
 .water {
-    background: #539DDF;
-    box-shadow: 0 0 20px #539DDF;
+  background: #539ddf;
+  box-shadow: 0 0 20px #539ddf;
 }
